<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/textView5"
        android:lineSpacingExtra="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textAlignment="center"
        />

    <TextView
        android:clickable="true"
        android:id="@+id/install_saavn"
        android:paddingTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_install"
        android:fontFamily="monospace"
        android:textStyle="normal|bold"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:layout_below="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/about_me"
        android:text="@string/about_me"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textStyle="normal|bold"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_disclaimer"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:textStyle="normal|bold"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:layout_below="@+id/install_saavn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>